<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_inicio"
            android:checked="true"/>

        <item
            android:id="@+id/nav_fazer_pedido"
            android:icon="@drawable/ic_add_pedido"
            android:title="@string/nav_fazer_pedido"
            />
        <item
            android:id="@+id/nav_meus_pedidos"
            android:icon="@drawable/ic_order"
            android:title="@string/nav_meus_pedidos"/>
        <item
            android:id="@+id/nav_sair"
            android:icon="@drawable/ic_exit"
            android:title="@string/nav_sair"/>





    </group>

</menu>