<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
    android:id="@+id/action_buscar"
        android:title="@string/action_buscar"
        app:showAsAction ="ifRoom|collapseActionView"
        android:icon="@drawable/ic_action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:id="@+id/action_atualizar"
        android:title="@string/action_atualizar"
        app:showAsAction ="ifRoom"
        android:icon="@drawable/ic_action_atualizar"
        />


    <item
        android:id="@+id/action_configuracoes"
        android:title="@string/action_configuracoes"
        app:showAsAction ="never"
        android:icon="@drawable/ic_action_settings"
        />





</menu>